--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Marko026.github.io/arb-travel",
+  "homepage": "https.//Marko026.github.io/arb-travel",
   "name": "arb-travel",
   "version": "0.1.0",
   "private": true,
@@ -42,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
