--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marko026.github.io/marko026.github.io/arb-travel/",
+  "homepage": "https://marko026.github.io/",
   "name": "arb-travel",
   "version": "0.1.0",
   "private": true,
