--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://marko026.github.io/",
   "name": "arb-travel",
+  "homepage": "https://marko026.github.io/arb-travel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
